<?xml version="1.0"?>
<package>
  <name>manycal</name>
  <version>0.0.1</version>
  <description>A camera network calibration package.</description>

  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>argus_utils</build_depend>
  <build_depend>argus_msgs</build_depend>
  <build_depend>graphopt</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>extrinsics_array</build_depend>
  <build_depend>fiducials</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>argus_utils</run_depend>
  <run_depend>argus_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>graphopt</run_depend>
  <run_depend>extrinsics_array</run_depend>
  <run_depend>fiducials</run_depend>
  
</package>
